[tool.poetry]
name = "aivoov"
version = "0.1.0"
description = "Makes audio files from a transcript"
authors = ["Nick LaPierre"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
